--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 
 body {
   background-image: url("../images/diseno-patron-cafe.avif");
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
 
 .titulos {
